customer-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: customer-api
  name: customer-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.kompose.service: customer-api
    spec:
      containers:
      - env:
        - name: RDS_DB_NAME
          value: customer
        - name: RDS_HOSTNAME
          value: mysql
        - name: RDS_PASSWORD
          value: user
        - name: RDS_PORT
          value: "3306"
        - name: RDS_USERNAME
          value: user
        image: cijosunny/customer-api-k8s:0.0.1-SNAPSHOT
        name: customer-api
        ports:
        - containerPort: 8081
      restartPolicy: Always
