customer-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: customer-api
  name: customer-api
spec:
  type: LoadBalancer
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: customer-api
