sales-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sales-api
  name: sales-api
spec:
  type: LoadBalancer
  ports:
  - name: "9091"
    port: 9091
    targetPort: 9091
  selector:
    io.kompose.service: sales-api
