ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /customer-api/*
        backend:
          serviceName: customer-api
          servicePort: 8081          
      - path: /sales-api/*
        backend:
          serviceName: sales-api
          servicePort: 9091
